CHANGE: Core  | Added support for plugins which implement mainline DHT [amc1]
                 
BUGFIX: UI    | Shells no longer use the low-res frog icon, the normal main window icon is now used instead [amc1]
BUGFIX: UI    | Limiting comments in General View to 5k characters under WinXP to avoid crashes due to faulty comctl32.dll [The 8472]


2007.12.21 | Azureus Vuze 3.0.4.2

FEATURE: UI   | Added "Check Files Exist" menu option [amc1]
FEATURE: Plug | Perform low resource usage tracking of online torrents for swarm cross-population purposes [Parg]

CHANGE: Core  | Added option to disable download speed focus [The 8472]
CHANGE: Core  | Reduced memory usage for many-torrent instances [The 8472]
CHANGE: UI    | Multiple selected torrent export now works [amc1]

BUGFIX: Core  | Fixed IP filters not working when ALLOW instead of DENY was used [Parg]
BUGFIX: Core  | Improve rebuffering behaviour when real-time pieces are too slow for any peers to get in time [Parg]
BUGFIX: Core  | Ensure minimum buffer requirements are factored into ETA calculation [Parg]
BUGFIX: UI    | Eliminated various memory leaks [The 8472]



2007.12.06 | Azureus Vuze 3.0.4.0

FEATURE: Core | Reconnect to peers after unexpected disconnect / recover stats of recently disconnected peers [Parg,The 8472]
FEATURE: Core | Global download speed limit can also limit the number of outgoing requests, this should improve TCP performance [The 8472]
                 -does not work with auto-speed since an explicit download speed-limit must be set
                 -downloads from as few peers as possible when the global limit is reached 
                 -prioritizes downloads which are on the head of the queue
FEATURE: Core | IP binding now provides primitive round-robin load balancing for users with multiple internet connections; accepts interface names and IPv6 binding (if supported on the platform) [The 8472]
FEATURE: Core | Embed ChangeLog.txt in release jar [Nolar]